로그인, 로그아웃까지 구현

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,13 +49,13 @@
             <div id="sidebar" class="nav-collapse">
                 <ul class="sidebar-menu" id="nav-accordion">
                     <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                   <li class="mt">
+                    <li class="mt">
                         <a href="/">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
                         </a>
                     </li>
-                     <li class="sub-menu">
+                    <li class="sub-menu">
                         <a href="/review" style="color:yellow">
                             <i class="fa fa-tasks" style="color:yellow"></i>
                             <span>공지사항</span>
@@ -77,6 +77,12 @@
                         <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
                             <span>후기 남기기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="#" onclick="loginout(event)" style="color:cornflowerblue">
+                            <i class="fa fa-google" aria-hidden="true"></i>
+                            <span id="AUTH_STATE" class="blue-text">(인증되지 않음)</span>
                         </a>
                     </li>
                 </ul>
@@ -139,10 +145,6 @@
                     </script>
                 </div>
 
-                <div class="container-fluid">
-
-
-                </div>
             </div>
             <!-- /#page-content-wrapper -->
             <div id="addiv"><img src="img/ad.JPG">
@@ -173,8 +175,7 @@
     <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
-
-
+    
     <!-- server core script -->
     <script src="https://stark-plateau-86360.herokuapp.com/socket.io/socket.io.js"></script>
     <script>
@@ -264,32 +265,47 @@
         })();
     </script>
     <!-- Channel Plugin Scripts -->
-<script>
-  window.channelPluginSettings = {
-    "plugin_id": "73160b9b-184d-4f6f-a0b0-4f758715165c"
-  };
-  (function() {
-    var node = document.createElement('div');
-    node.id = 'ch-plugin';
-    document.body.appendChild(node);
-    var async_load = function() {
-      var s = document.createElement('script');
-      s.type = 'text/javascript';
-      s.async = true;
-      s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
-      s.charset = 'UTF-8';
-      var x = document.getElementsByTagName('script')[0];
-      x.parentNode.insertBefore(s, x);
-    };
-    if (window.attachEvent) {
-      window.attachEvent('onload', async_load);
-    } else {
-      window.addEventListener('load', async_load, false);
-    }
-  })();
-</script>
-<!-- End Channel Plugin -->
-
+    <script>
+        window.channelPluginSettings = {
+            "plugin_id": "73160b9b-184d-4f6f-a0b0-4f758715165c"
+        };
+        (function() {
+            var node = document.createElement('div');
+            node.id = 'ch-plugin';
+            document.body.appendChild(node);
+            var async_load = function() {
+                var s = document.createElement('script');
+                s.type = 'text/javascript';
+                s.async = true;
+                s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
+                s.charset = 'UTF-8';
+                var x = document.getElementsByTagName('script')[0];
+                x.parentNode.insertBefore(s, x);
+            };
+            if (window.attachEvent) {
+                window.attachEvent('onload', async_load);
+            } else {
+                window.addEventListener('load', async_load, false);
+            }
+        })();
+    </script>
+    <!-- End Channel Plugin -->
+    <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
+    <script src="/firebase/firebase.js"></script>
+    <script src="/firebase/firebase_use.js"></script>
+    <script type="text/javascript">
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                $(".chat-name").val(user.displayName);
+            } else {
+                $(".chat-name").val("");
+            }
+        });
+    </script>
 </body>
 
 </html>
