--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,25 +20,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
-    <style>
-        #BTN_GOOGLE_LOGIN {
-            background: transparent;
-            border: transparent;
-            border-radius: 10%;
-        }
-
-        #BTN_GOOGLE_LOGIN>i {
-            color: white;
-        }
-
-        #BTN_GOOGLE_LOGIN:hover {
-            background-color: white;
-        }
-
-        #BTN_GOOGLE_LOGIN:hover>i {
-            color: black;
-        }
-    </style>
 </head>
 
 <body id="page-top">
@@ -46,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">방방곡곡</a>
+            <a id="isLogin" class="navbar-brand js-scroll-trigger" href="#page-top">방방곡곡</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -64,9 +45,6 @@
                     </li>
                     <li class="nav-item">
                         <button id="BTN_GOOGLE_LOGIN" type="button" class="nav-link"><i class="fa fa-google" aria-hidden="true"><span id="AUTH_STATE" class="blue-text">(인증되지 않음)</span></i></button>
-                    </li>
-                    <li class="nav-item">
-                        
                     </li>
                 </ul>
             </div>
@@ -196,22 +174,15 @@
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
     <script src="/firebase/firebase.js"></script>
+    <script src="/firebase/firebase_use.js"></script>
     <script type="text/javascript">
-        $("#BTN_GOOGLE_LOGIN").click(function() {
-            var provider = new firebase.auth.GoogleAuthProvider();
-
-            firebase.auth().signInWithPopup(provider).then(function(result) {
-                $("#AUTH_STATE").text(result.user.displayName + "Logout");
-            }).catch(function(error) {
-                alert(error.message)
-            });
-        });
-
         firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
-                $("#AUTH_STATE").text(user.displayName + "Logout");
+                $("#AUTH_STATE").text("Logout");
+                $("#isLogin").text(user.displayName+"님 환영합니다.");
             } else {
-                $("#AUTH_STATE").text("Login")
+                $("#AUTH_STATE").text("Login");
+                $("#isLogin").text("방방곡곡");
             }
         });
     </script>
