--- a/views/story_content.ejs
+++ b/views/story_content.ejs
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
     <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
     <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -59,6 +59,12 @@
                     <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
                             <span>후기 남기기</span>
+                        </a>
+                </li>
+                <li class="sub-menu">
+                    <a href="#" onclick="loginout(event)" style="color:cornflowerblue">
+                            <i class="fa fa-google" aria-hidden="true"></i>
+                            <span id="AUTH_STATE" class="blue-text">(인증되지 않음)</span>
                         </a>
                 </li>
             </ul>
@@ -102,10 +108,6 @@
     <!-- /#page-content-wrapper -->
     <br>
 
-
-
-    <!-- /#wrapper -->
-
     <!-- Bootstrap core JavaScript -->
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
@@ -121,6 +123,13 @@
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
+    <script src="/firebase/firebase.js"></script>
+    <script src="/firebase/firebase_use.js"></script>
 
 </body>
 
