입력시 사용자 이름 추가, 라우터 admin,user로 나누어놓음

--- a/views/story_write.ejs
+++ b/views/story_write.ejs
@@ -125,7 +125,15 @@
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
     <script src="/firebase/firebase.js"></script>
     <script src="/firebase/firebase_use.js"></script>
-
+    <script type="text/javascript">
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                $("#name").val(user.displayName);
+            } else {
+                $("#name").val("");
+            }
+        });
+    </script>
 </body>
 
 </html>
