관리자 + index화면 동적으로 생성 잘되는지 확인해봐야댐

--- a/views/admin/review_content.ejs
+++ b/views/admin/review_content.ejs
@@ -26,49 +26,49 @@
         <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
     </div>
     <!-- Sidebar -->
-    <aside>
-        <div id="sidebar" class="nav-collapse">
-            <ul class="sidebar-menu" id="nav-accordion">
-                <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                <li class="mt">
-                    <a href="/">
+        <aside>
+            <div id="sidebar" class="nav-collapse">
+                <ul class="sidebar-menu" id="nav-accordion">
+                    <h3 class="centered" style="color:bisque">방방곡곡</h3>
+                    <li class="mt">
+                        <a href="/admin">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
                         </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="/review" style="color:yellow">
-                            <i class="fa fa-tasks" style="color:yellow"></i>
-                            <span>공지사항</span>
-                        </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="/main" style="color:deeppink;">
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/admin/main" style="color:deeppink;">
                             <i class="fa fa-desktop" style="color:deeppink;"></i>
-                            <span>방송 화면</span>
+                            <span>관리 화면</span>
                         </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="/story" style="color:darkorange">
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/admin/notice" style="color:yellow">
+                            <i class="fa fa-tasks" style="color:yellow"></i>
+                            <span>공지사항 관리</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/admin/story" style="color:darkorange">
                             <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
-                            <span>여행지 신청하기</span>
+                            <span>사연 관리</span>
                         </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="/review" style="color:darkseagreen">
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/admin/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
-                            <span>후기 남기기</span>
+                            <span>후기 관리</span>
                         </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="#" onclick="loginout(event)" style="color:cornflowerblue">
+                    </li>
+                    <li class="sub-menu">
+                        <a href="#" onclick="loginout(event)" style="color:cornflowerblue">
                             <i class="fa fa-google" aria-hidden="true"></i>
                             <span id="AUTH_STATE" class="blue-text">(인증되지 않음)</span>
                         </a>
-                </li>
-            </ul>
-        </div>
-    </aside>
+                    </li>
+                </ul>
+            </div>
+        </aside>
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
