--- a/views/user/main.ejs
+++ b/views/user/main.ejs
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="/review" style="color:yellow">
+                        <a href="/notice" style="color:yellow">
                             <i class="fa fa-tasks" style="color:yellow"></i>
                             <span>공지사항</span>
                         </a>
