--- a/views/admin/notice.ejs
+++ b/views/admin/notice.ejs
@@ -22,43 +22,42 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="toggle-menu" class="sidebar-toggle-box">
-            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
-        </div>
-        <!-- Sidebar -->
-        <aside>
+    <div id="toggle-menu" class="sidebar-toggle-box">
+        <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
+    </div>
+    <!-- Sidebar -->
+    <aside>
             <div id="sidebar" class="nav-collapse">
                 <ul class="sidebar-menu" id="nav-accordion">
                     <h3 class="centered" style="color:bisque">방방곡곡</h3>
                     <li class="mt">
-                        <a href="/">
+                        <a href="/admin">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="/review" style="color:yellow">
-                            <i class="fa fa-tasks" style="color:yellow"></i>
-                            <span>공지사항</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/main" style="color:deeppink;">
+                        <a href="/admin/main" style="color:deeppink;">
                             <i class="fa fa-desktop" style="color:deeppink;"></i>
-                            <span>방송 화면</span>
+                            <span>관리 화면</span>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="/story" style="color:darkorange">
+                        <a href="/admin/notice" style="color:yellow">
+                            <i class="fa fa-tasks" style="color:yellow"></i>
+                            <span>공지사항 관리</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/admin/story" style="color:darkorange">
                             <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
-                            <span>여행지 신청하기</span>
+                            <span>사연 관리</span>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="/review" style="color:darkseagreen">
+                        <a href="/admin/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
-                            <span>후기 남기기</span>
+                            <span>후기 관리</span>
                         </a>
                     </li>
                     <li class="sub-menu">
@@ -70,65 +69,64 @@
                 </ul>
             </div>
         </aside>
-        <!-- /#sidebar-wrapper -->
+    <!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
-        <section id="main-content">
-            <section class="wrapper">
-                <div class="container-fluid">
-                    <br>
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">
-                            <a href="#">사연을 남겨주세요</a>
-                        </li>
-                    </ol>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
-                                <thead>
-                                    <tr>
-                                        <th>번호</th>
-                                        <th>제목</th>
-                                        <th>작성자</th>
-                                        <th>등록일</th>
+    <!-- Page Content -->
+    <section id="main-content">
+        <section class="wrapper">
+            <div class="container-fluid">
+                <br>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="#">공지사항</a>
+                    </li>
+                </ol>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                                <tr>
+                                    <th>번호</th>
+                                    <th>제목</th>
+                                    <th>작성자</th>
+                                    <th>등록일</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <% notice.forEach((item)=>{ %>
+                                    <tr class='clickable-row'>
+                                        <td style="width:13%;">
+                                            <%= item.Notice_ID %>
+                                        </td>
+                                        <td style="width:50%;">
+                                            <a href="/notice/<%= item.Notice_ID %>">
+                                                <%= item.Notice_Title %>
+                                            </a>
+                                        </td>
+                                        <td>
+                                            관리자
+                                        </td>
+                                        <td>
+                                            <%= new Date(item.Notice_Date).toLocaleString() %>
+                                        </td>
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    <% story.forEach((item)=>{ %>
-                                        <tr class='clickable-row'>
-                                            <td style="width:13%;">
-                                                <%= item.Story_ID %>
-                                            </td>
-                                            <td style="width:50%;">
-                                                <a href="/story/<%= item.Story_ID %>">
-                                                    <%= item.Story_Title %>
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <%= item.User_Name %>
-                                            </td>
-                                            <td>
-                                                <%= new Date(item.Story_Date).toLocaleString() %>
-                                            </td>
-                                        </tr>
-                                        <%})%>
-                                </tbody>
-                            </table>
-                        </div>
+                                    <%})%>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-                <a class="write-btn btn" href="/story_write"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                <!--/row -->
-            </section>
-            <div id="addiv"><img src="/img/ad.JPG">
             </div>
+            <a class="write-btn btn" href="/admin/notice_write"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+            <!--/row -->
         </section>
-        <!-- /#page-content-wrapper -->
-        <br>
+        <div id="addiv"><img src="img/ad.JPG">
+        </div>
+    </section>
+    <!-- /#page-content-wrapper -->
 
 
 
-    </div>
+
     <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
@@ -144,6 +142,13 @@
     <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
+    <script src="/firebase/firebase.js"></script>
+    <script src="/firebase/firebase_use.js"></script>
     <!-- Channel Plugin Scripts -->
     <script>
         window.channelPluginSettings = {
@@ -169,13 +174,6 @@
             }
         })();
     </script>
-    <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
-    <script src="/firebase/firebase.js"></script>
-    <script src="/firebase/firebase_use.js"></script>
     <!-- End Channel Plugin -->
 </body>
 
