--- a/views/user/review_content.ejs
+++ b/views/user/review_content.ejs
@@ -23,7 +23,7 @@
 
 <body>
     <div id="toggle-menu" class="sidebar-toggle-box">
-        <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
+        <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
     </div>
     <!-- Sidebar -->
     <aside>
@@ -37,7 +37,7 @@
                         </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="/review" style="color:yellow">
+                    <a href="/notice" style="color:yellow">
                             <i class="fa fa-tasks" style="color:yellow"></i>
                             <span>공지사항</span>
                         </a>
@@ -74,62 +74,42 @@
     <!-- Page Content -->
     <section id="main-content">
         <section class="wrapper">
-            <div class="container-fluid">
-                <br>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="#">후기을 남겨주세요</a>
-                    </li>
-                </ol>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
-                            <thead>
-                                <tr>
-                                    <th>번호</th>
-                                    <th>제목</th>
-                                    <th>작성자</th>
-                                    <th>등록일</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% review.forEach((item)=>{ %>
-                                    <tr class='clickable-row'>
-                                        <td style="width:13%;">
-                                            <%= item.Review_ID %>
-                                        </td>
-                                        <td style="width:50%;">
-                                            <a href="/review/<%= item.Review_ID %>">
-                                                <%= item.Review_Title %>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <%= item.User_Name %>
-                                        </td>
-                                        <td>
-                                            <%= new Date(item.Review_Date).toLocaleString() %>
-                                        </td>
-                                    </tr>
-                                    <%})%>
-                            </tbody>
-                        </table>
+            <div align='center'>
+                <a href="admin" class="logo"><b><%= review[0].User_Name %>님의 사연입니다.</b></a>
+            </div>
+            <div class="container">
+                <div class="review_contents">
+                    <div>
+                        <div>
+                            <span> 제  목 : </span>
+                            <span><%= review[0].Review_Title %></span>
+                        </div>
+                        <div>
+                            <span> 작성자 : </span>
+                            <span><%= review[0].User_Name %></span>
+                        </div>
+                        <div>
+                            <span> 작성일 : </span>
+                            <span><%=  new Date(review[0].Review_Date).toLocaleString() %></span>
+                        </div>
                     </div>
+                    <div>내용</div>
+                    <div class="content_content">
+                        <%= review[0].Review_Content %>
+                    </div>
+                    <form action="/story">
+                        <input type="submit" class="send btn-lg btn-border" value="돌아가기">
+                    </form>
                 </div>
             </div>
-            <a class="write-btn btn" href="/review_write"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-            <!--/row -->
         </section>
-        <div id="addiv"><img src="img/ad.JPG">
-        </div>
     </section>
     <!-- /#page-content-wrapper -->
     <br>
 
-
-
-
     <!-- /#wrapper -->
 
+    <!-- Bootstrap core JavaScript -->
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -143,6 +123,7 @@
     <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
@@ -150,32 +131,6 @@
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
     <script src="/firebase/firebase.js"></script>
     <script src="/firebase/firebase_use.js"></script>
-    <!-- Channel Plugin Scripts -->
-    <script>
-        window.channelPluginSettings = {
-            "plugin_id": "73160b9b-184d-4f6f-a0b0-4f758715165c"
-        };
-        (function() {
-            var node = document.createElement('div');
-            node.id = 'ch-plugin';
-            document.body.appendChild(node);
-            var async_load = function() {
-                var s = document.createElement('script');
-                s.type = 'text/javascript';
-                s.async = true;
-                s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
-                s.charset = 'UTF-8';
-                var x = document.getElementsByTagName('script')[0];
-                x.parentNode.insertBefore(s, x);
-            };
-            if (window.attachEvent) {
-                window.attachEvent('onload', async_load);
-            } else {
-                window.addEventListener('load', async_load, false);
-            }
-        })();
-    </script>
-    <!-- End Channel Plugin -->
 
 </body>
 
