--- a/views/user/story_content.ejs
+++ b/views/user/story_content.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
     <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
     <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                         </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="/review" style="color:yellow">
+                    <a href="/notice" style="color:yellow">
                             <i class="fa fa-tasks" style="color:yellow"></i>
                             <span>공지사항</span>
                         </a>
@@ -75,36 +76,39 @@
     <section id="main-content">
         <section class="wrapper">
             <div align='center'>
-                <a href="admin" class="logo"><b>사연을 작성해주세요.</b></a>
+                <a href="admin" class="logo"><b><%= story[0].User_Name %>님의 사연입니다.</b></a>
             </div>
             <div class="container">
                 <div class="story_contents">
-                    <form method="post">
+                    <div>
                         <div>
-                            <div style="margin-bottom:2%;">
-                                <label for="title">제&nbsp;&nbsp;&nbsp;목 :</label>
-                                <input class="text-input" type="text" id="title" name="title" placeholder="제목을 입력하세요">
-                            </div>
-                            <div style="margin-bottom:2%;">
-                                <label for="name">작성자 :</label>
-                                <input class="text-input" type="text" id="name" name="name" placeholder="작성자 입력">
-                            </div>
+                            <span> 제  목 : </span>
+                            <span><%= story[0].Story_Title %></span>
                         </div>
-                        <div>내용</div>
-                        <textarea style="font-size:20px;" rows="15" name="content" placeholder="사연을 적어주세요!"></textarea>
-                        <button type="submit" class="btn-lg btn-theme02 btn-border">작성 완료</button>
+                        <div>
+                            <span> 작성자 : </span>
+                            <span><%= story[0].User_Name %></span>
+                        </div>
+                        <div>
+                            <span> 작성일 : </span>
+                            <span><%=  new Date(story[0].Story_Date).toLocaleString() %></span>
+                        </div>
+                    </div>
+                    <div>내용</div>
+                    <div class="content_content">
+                        <%= story[0].Story_Content %>
+                    </div>
+                    <form action="/story">
+                        <input type="submit" class="send btn-lg btn-border" value="돌아가기">
                     </form>
                 </div>
-                <form action="/story">
-                    <input type="submit" class="send btn-lg btn-border" value="돌아가기">
-                </form>
             </div>
         </section>
     </section>
     <!-- /#page-content-wrapper -->
     <br>
-    <!-- /#wrapper -->
 
+    <!-- Bootstrap core JavaScript -->
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -118,6 +122,7 @@
     <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
@@ -125,15 +130,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
     <script src="/firebase/firebase.js"></script>
     <script src="/firebase/firebase_use.js"></script>
-    <script type="text/javascript">
-        firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
-                $("#name").val(user.displayName);
-            } else {
-                $("#name").val("");
-            }
-        });
-    </script>
+
 </body>
 
 </html>
