관리자 사용자 완료. 뷰페이지 폼만 좀 더 꾸미면 될듯

--- a/views/admin/review.ejs
+++ b/views/admin/review.ejs
@@ -100,7 +100,7 @@
                                             <%= item.Review_ID %>
                                         </td>
                                         <td style="width:50%;">
-                                            <a href="/review/<%= item.Review_ID %>">
+                                            <a href="/admin/review/<%= item.Review_ID %>">
                                                 <%= item.Review_Title %>
                                             </a>
                                         </td>
