--- a/views/admin/review_content.ejs
+++ b/views/admin/review_content.ejs
@@ -97,7 +97,7 @@
                     <div class="content_content">
                         <%= review[0].Review_Content %>
                     </div>
-                    <form action="/story">
+                    <form action="/admin/review">
                         <input type="submit" class="send btn-lg btn-border" value="돌아가기">
                     </form>
                 </div>
