--- a/views/admin/story.ejs
+++ b/views/admin/story.ejs
@@ -103,7 +103,7 @@
                                                 <%= item.Story_ID %>
                                             </td>
                                             <td style="width:40%;">
-                                                <a href="/story/<%= item.Story_ID %>">
+                                                <a href="/admin/story/<%= item.Story_ID %>">
                                                     <%= item.Story_Title %>
                                                 </a>
                                             </td>
