--- a/views/user/main.ejs
+++ b/views/user/main.ejs
@@ -92,7 +92,7 @@
         <section id="main-content">
             <!-- Page Content -->
             <div align='center'>
-                <a href="admin" class="logo"><b>ON AIR</b></a>
+                <a href="#" class="logo"><b>ON AIR</b></a>
             </div>
             <div id="page-content-wrapper">
                 <div class="youtubeWrap">
