--- a/views/admin/main.ejs
+++ b/views/admin/main.ejs
@@ -92,72 +92,90 @@
         <section id="main-content">
             <!-- Page Content -->
             <div align='center'>
-                <a href="admin" class="logo"><b>ON AIR</b></a>
+                <a href="/admin" class="logo"><b>Admin Page</b></a>
             </div>
-            <div id="page-content-wrapper">
-                <div class="youtubeWrap">
+            <div class="container">
+                <div class="row mt">
+                    <!-- SERVER STATUS PANELS -->
+                    <div class="col-md-4 col-sm-4 mb">
+                        <a href="/admin/story">
+                            <div class="white-panel pn">
+                                <i class="fa fa-pencil-square  fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
+                                <div class="white-header">
+                                </div>
+                                <div align=center>
+                                    <h1 style="color:darkorange">사연 관리</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-4 mb">
+                        <a href="/admin/review">
+                            <div class="white-panel pn">
+                                <i class="fa fa-comments-o fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
+                                <div class="white-header">
+                                </div>
+                                <div align=center>
+                                    <h1 style="color:darkseagreen">후기 관리</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-4 mb">
+                        <a href="/admin/notice">
+                            <div class="white-panel pn">
+                                <i class="fa fa-sticky-note-o fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
+                                <div class="white-header">
+                                </div>
+                                <div align=center>
+                                    <h1 style="color:darkgoldenrod">공지사항 관리</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-4 mb">
+                        <a href="https://console.firebase.google.com/project/mobileweb-185905/authentication/users">
+                            <div class="white-panel pn">
+                                <i class="fa fa-user-circle fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
+                                <div class="white-header">
+                                </div>
+                                <div align=center>
+                                    <h1 align=center style="color:darkred">계정 관리</h1>
+                                </div>
+                            </div>
 
-                    <script>
-                        // 2. This code loads the IFrame Player API code asynchronously.
-                        var tag = document.createElement('script');
-
-                        tag.src = "https://www.youtube.com/iframe_api";
-                        var firstScriptTag = document.getElementsByTagName('script')[0];
-                        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-                        // 3. This function creates an <iframe> (and YouTube player)
-                        //    after the API code downloads.
-                        var player;
-
-                        function onYouTubeIframeAPIReady() {
-                            player = new YT.Player('page-content-wrapper', {
-                                height: '560',
-                                width: '315',
-                                videoId: 'vDxD4HwEFdY',
-
-                                events: {
-                                    'onReady': onPlayerReady,
-                                    'onStateChange': onPlayerStateChange
-                                }
-                            });
-                        }
-
-                        // 4. The API will call this function when the video player is ready.
-                        function onPlayerReady(event) {
-                            event.target.playVideo();
-                        }
-
-                        // 5. The API calls this function when the player's state changes.
-                        //    The function indicates that when playing a video (state=1),
-                        //    the player should play for six seconds and then stop.
-                        var done = false;
-
-                        function onPlayerStateChange(event) {
-                            if (event.data == YT.PlayerState.PLAYING && !done) {
-                                setTimeout(stopVideo, 60000000);
-                                done = true;
-                            }
-                        }
-
-                        function stopVideo() {
-                            player.stopVideo();
-                        }
-                    </script>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-4 mb">
+                        <a href="https://mlab.com/">
+                            <div class="white-panel pn">
+                                <i class="fa fa-weixin fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
+                                <div class="white-header">
+                                </div>
+                                <div align=center>
+                                    <h1 style="color:darkgreen">채팅 관리</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-sm-4 mb">
+                        <a href="/admin/settings">
+                            <div class="white-panel pn">
+                                <i class="fa fa-gears  fa-3x fa-fw" style="font-size:400%; margin-top:20%"></i>
+                                <div class="white-header">
+                                </div>
+                                <div align=center>
+                                    <h1 style="color:lightseagreen">기 타 설 정</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- /col-md-4 -->
                 </div>
+                <!-- /row -->
+            </div>
 
-            </div>
-            <!-- /#page-content-wrapper -->
-            <div id="addiv"><img src="img/ad.JPG">
-            </div>
-            <div class="chat">
-                <input type="text" class="chat-name" placeholder="이름을 입력하세요">
-                <div class="chat-messages"></div>
-                <div class="send">
-                    <textarea class="sendchat" placeholder="메세지를 입력하세요"></textarea>
-                    <button class="btn-lg btn-theme btn-border">전송하기</button>
-                </div>
-                <div class="chat-status">Status:<span>채팅서버 활성화</span></div>
-            </div>
+
         </section>
     </div>
     <!-- /#wrapper -->
@@ -175,120 +193,7 @@
     <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
-    
-    <!-- server core script -->
-    <script src="https://stark-plateau-86360.herokuapp.com/socket.io/socket.io.js"></script>
-    <script>
-        (function() {
-            var getNode = function(s) {
-                    return document.querySelector(s);
-                },
 
-                status = getNode('.chat-status span'),
-                messages = getNode('.chat-messages'),
-                textarea = getNode('.chat textarea'),
-                chatName = getNode('.chat-name'),
-                button = getNode('.chat button'),
-
-                statusDefault = status.textContent,
-
-                setStatus = function(s) {
-                    status.textContent = s;
-
-
-                    if (s !== statusDefault) {
-                        var delay = setTimeout(function() {
-                            setStatus(statusDefault);
-                            clearInterval(delay);
-                        }, 3000);
-                    }
-                };
-
-            setStatus('채팅 서버 대기중');
-
-            try {
-                var socket = io.connect('https://stark-plateau-86360.herokuapp.com');
-            } catch (e) {}
-            if (socket !== undefined) {
-
-                socket.on('output', function(data) {
-                    if (data.length) {
-                        for (var x = 0; x < data.length; x = x + 1) {
-                            var message = document.createElement('div');
-                            message.setAttribute('class', 'chat-message');
-                            message.textContent = data[x].name + ':' + data[x].message;
-
-                            messages.appendChild(message);
-                            messages.insertBefore(message, messages.firstChild);
-                        }
-                    }
-                });
-
-                socket.on('status', function(data) {
-                    setStatus((typeof data === 'object') ? data.message : data);
-
-                    if (data.clear === true) {
-                        textarea.value = '';
-                    }
-                });
-
-
-                textarea.addEventListener('keydown', function(event) {
-                    var self = this,
-                        name = chatName.value;
-
-
-
-                    if (event.which === 13 && event.shiftKey === false) {
-                        socket.emit('input', {
-                            name: name,
-                            message: self.value
-                        });
-                        event.preventDefault();
-                    }
-                });
-
-                button.addEventListener('click', function(event) {
-                    var text = textarea.value,
-                        name = chatName.value;
-
-                    socket.emit('input', {
-                        name: name,
-                        message: text
-                    });
-                    event.preventDefault();
-                });
-
-            }
-
-
-        })();
-    </script>
-    <!-- Channel Plugin Scripts -->
-    <script>
-        window.channelPluginSettings = {
-            "plugin_id": "73160b9b-184d-4f6f-a0b0-4f758715165c"
-        };
-        (function() {
-            var node = document.createElement('div');
-            node.id = 'ch-plugin';
-            document.body.appendChild(node);
-            var async_load = function() {
-                var s = document.createElement('script');
-                s.type = 'text/javascript';
-                s.async = true;
-                s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
-                s.charset = 'UTF-8';
-                var x = document.getElementsByTagName('script')[0];
-                x.parentNode.insertBefore(s, x);
-            };
-            if (window.attachEvent) {
-                window.attachEvent('onload', async_load);
-            } else {
-                window.addEventListener('load', async_load, false);
-            }
-        })();
-    </script>
     <!-- End Channel Plugin -->
     <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
