--- a/views/user/story_content.ejs
+++ b/views/user/story_content.ejs
@@ -90,6 +90,10 @@
                             <span><%= story[0].User_Name %></span>
                         </div>
                         <div>
+                            <span> 원하는 장소 : </span>
+                            <span><%= story[0].Story_Dest %></span>
+                        </div>
+                        <div>
                             <span> 작성일 : </span>
                             <span><%=  new Date(story[0].Story_Date).toLocaleString() %></span>
                         </div>
