디비 연결문제 반쯤 해결

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -76,7 +76,7 @@
                 <div class="col-lg-8 mx-auto">
                     <h2>방방곡곡?</h2>
                     <p>여행을 떠나고 싶지만 여건이 안되시는분, 다른 사람의 여행기를 즐겨 보시는분, 그들을 위해 방방곡곡이 가드립니다.
-                        <a href="/review">여기</a> 를 눌러 가고싶은 여행지와 사연을 신청하세요!</p>
+                        <a href="/story">여기</a> 를 눌러 가고싶은 여행지와 사연을 신청하세요!</p>
                     <p>저희 방방곡곡에서는 여행을 좋아하는 모험심이 가득한 크루를 모집하고 있습니다
                         <a href="https://bangbanggokgok.channel.io">여기</a> 를 눌러 크루에 지원하세요!
 
